Revision history for {{$dist->name}}

{{$NEXT}}

2.011000  2012-06-03 16:12:54 America/Chicago
       - Add Helper::Row::SelfResultSet

2.010001  2012-05-26 10:58:50 America/Chicago
       - Make ::Schema::LintContents marginally more useful in that it no
         longer needlessly limits your sources to one moniker only

2.010000  2012-05-17 21:26:47 America/Chicago
       - Add Helper::Schema::LintContents

2.009001  2012-05-11 11:00:51 America/Chicago
       - Stupid doc fix

2.009000  2012-05-11 10:45:15 America/Chicago
       - add Helper::ResultSet::SearchOr component to avoid Union when possible
       - Simplify implementation of CorrelatedRelationship to work with more
         versions of DBIx::Class

2.008000  2012-05-09 13:36:28 America/Chicago
       - Add Helper::ResultSet::CorrelatedRelationship for easy correlated
         subqueries

2.007004  2012-04-11 19:53:51 America/Chicago
       - Fix ::OnColumnChange to not obliviate args passed to update

2.007003  2012-02-29 19:56:57 CST6CDT
       - Fix ::Row::NumifyGet breaking when using select/as or columns

2.007002  2012-01-09 16:23:08 CST6CDT
       - Fix POD in AutoRemoveColumns (mattp)
       - Fix multiple level deep Result namespaces (Siddhartha Basu)

2.007001  2011-08-17 22:34:54 CST6CDT
       - Fix dependency (add Carp::Clan)

2.007000  2011-03-14 21:43:20 CST6CDT
       - Add Helper::Row::RelationshipDWIM for handy definition of relationships
       - Significantly simplify implementation of ResultSet::ResultClassDWIM
         (thanks ribasushi)

2.006000  2011-01-31 18:06:56 CST6CDT
       - Add ResultSet::ResultClassDWIM to allow ::HashRefInflator (or ::HRI)
       - Add Schema::GenerateSource for handy addition of subclassed results

2.005000  2010-10-13 19:39:56 CST6CDT
       - Add ResultSet::Me to define predefined searches a more nicely
       - Fix DBIx::Class::Helper::ResultSet::Random to not base off Union
       - Fix DBIx::Class::Helper::ResultSet::Random for MSSQL
