@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Add Helper::ResultSet::NoColumns
 
 2.011000  2012-06-03 16:12:54 America/Chicago
        - Add Helper::Row::SelfResultSet
